--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <!-- use 3.0.0 for Java 8 projects -->
+            <version>3.0.0</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 	
 	<build>
